--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,14 @@
     </dependency>
   </dependencies>
 
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub OWNER Apache Maven Packages</name>
+      <url>https://www.github.com/jcarrascogarcia/ci-lab-tarea2</url>
+    </repository>
+  </distributionManagement> 
+  
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
